# todo-api

./: Cargo.toml  db.sqlite
api/: bruno.json  create todo.bru  delete todo.bru  get all todos.bru  get one todo.bru  mark todo as done.bru
api/auth/: login.bru  register.bru
src/: lib.rs  main.rs
src/db/: mod.rs
src/guards/: mod.rs
src/handlers/: auth.rs  todo.rs
src/models/: todo.rs  user.rs
src/routes/: mod.rs
